--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -1,10 +1,10 @@
 FROM jenkins/jenkins:lts
 
-# Switch to root to install Docker and Terraform
+# Switch to root to install Docker, Terraform, and gcloud CLI
 USER root
 
 RUN apt-get update && \
-    apt-get install -y curl wget unzip && \
+    apt-get install -y curl wget unzip apt-transport-https ca-certificates gnupg lsb-release && \
     curl -fsSL "https://download.docker.com/linux/static/stable/x86_64/docker-28.2.2.tgz" | \
     tar -xzC /usr/local/bin --strip=1 docker/docker && \
     chmod +x /usr/local/bin/docker && \
@@ -17,6 +17,17 @@ RUN wget -O terraform.zip https://releases.hashicorp.com/terraform/${TERRAFORM_V
     mv terraform /usr/local/bin/ && \
     chmod +x /usr/local/bin/terraform && \
     rm terraform.zip
+
+# Install Google Cloud CLI
+RUN echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && \
+    curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - && \
+    apt-get update && \
+    apt-get install -y google-cloud-cli && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# Optional: Install additional gcloud components (uncomment if needed)
+# RUN gcloud components install kubectl gke-gcloud-auth-plugin --quiet
 
 RUN usermod -aG root jenkins
 
